# cppPicoTemplate

./: CMakeLists.txt  LICENSE  README.md  launch.json  main.cpp  main.h
